# txt2html

./: CONTRIBUTING.md  README.md  pyproject.toml  sample.py  setup.py  txt2html.py
.github/workflow/: ci.yml
.github/workflows/: ci.yml
examples/: test1.txt
examples/test-folder/: test1.txt  test2.md  test3.md  test5.txt
examples/test-folder-output/: test3.html  test4.html  test5.html
tests/: sample_test.py  test_process_line.py
txt2html/: test1.html  test2.html  test4.html
