[tool.poetry]
name = "txt2html"
version = "1.0.1"
description = "a command-line tool process input .txt files into generated .html files"
authors = ["mingming-ma <133393905+mingming-ma@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tomli = "^2.0.1"

[tool.poetry.group.dev.dependencies]
tomli = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
